# idk

./: Cargo.toml  README.md  idk.rb
.circleci/: config.yml
.github/workflows/: frontend.yml  rust.yml  test.yml
api/: .env.example  Dockerfile  package-lock.json  package.json
api/src/: admin.js  app.js  db.js  gpt3.js  middleware.js  supabaseClient.js
cli/: Cargo.toml  idk.rb
cli/src/: authserver.rs  idkrequest.rs  index.html  main.rs
frontend/: Cargo.toml  package.json  rollup.config.js
frontend/public/: index.html
frontend/src/: App.svelte  Dashboard.svelte  Login.svelte  Prompt.svelte  lib.rs
