[package]
name = "idk"
version = "0.1.0"
authors = ["Sahil Dhanju <sahildhanju1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3"
clap = "2.33.3"