[package]
name = "idk"
version = "0.1.0"
authors = ["Sahil Dhanju <sahildhanju1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3"
clap = "2.33.3"
clipboard = "0.5.0"
hyper = "0.13"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.7"
warp = "0.2.5"